# python-storage-api

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
config/: interfaces.yaml  pools.yaml  storages.yaml
storageapi/: base.py  strdevice.py  strprovider.py  strtype.py
