[metadata]
name=python-storage-api
author=Lukas Bednar
author_email=lbenar@redhat.com
summary=Interface allowing you to create various types of storages
description-file=README.md
license=GPLv3
keywords=
    storage
    api
    nfs
    iscsi
home-page=https://github.com/rhevm-qe-automation/python-otopi-mdp
classifier=
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Utilities
    Topic :: System :: Systems Administration
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
[files]
packages=
    storageapi
[entry_points]
console_scripts =
    storageapi = storageapi.cmd:main
storageapi.providers =
    nfs = storageapi.nfs:NFSProvider
[bdist_rpm]
requires=
    python-rrmngmnt
    python-six
build_requires =
    python
    python-setuptools
    python-pbr
[bdist_wheel]
universal = 1
[upload]
formats = sdist.tgz,bdist_wheel,bdist_rpm,bdist_egg
